add focus() method

--- a/example/app/pages/demo-local/demo-local.page.html
+++ b/example/app/pages/demo-local/demo-local.page.html
@@ -5,11 +5,12 @@
        (source: <a href="https://nl.wikipedia.org/wiki/Lijst_van_Antwerpenaars_(stad)">wikipedia</a>)
     </p>
     <p>
-      <aui-contact-picker
+      <aui-contact-picker #picker1cmp
         placeholder="kies een antwerpenaar" 
         [data]="listOfPeople1"
         [(value)]="picker1">
       </aui-contact-picker>
+      <button type="button" (click)="onPicker1BtnClick()">Focus</button>
     </p>
     <p *ngIf="picker1">Current value: {{picker1?.name}}</p>
     <br>
